--- a/parser/generator/Cargo.toml
+++ b/parser/generator/Cargo.toml
@@ -17,7 +17,7 @@ proc-macro = true
 quote = "1.0"
 proc-macro2 = "1.0"
 self-rust-tokenize = "0.3.3"
-parser = { path = "..", package = "ezno-parser", version = "0.0.6", features = [
+ezno-parser = { path = "..", version = "0.0.6", features = [
   "self-rust-tokenize",
 ] }
 
