--- a/.github/workflows/performance-and-size.yml
+++ b/.github/workflows/performance-and-size.yml
@@ -32,7 +32,16 @@ jobs:
         env:
           CARGO_PROFILE_RELEASE_DEBUG: true
 
-      - name: Run hyperfine
+      - name: Run parser (and stringer) performance
+        run: |
+          curl https://esm.sh/v128/react-dom@18.2.0/es2022/react-dom.mjs > react.js
+
+          echo "### Hyperfine">> $GITHUB_STEP_SUMMARY
+          echo "\`\`\`shell">> $GITHUB_STEP_SUMMARY
+          hyperfine './target/release/ezno ast-explorer --file react.js uglifier' >> $GITHUB_STEP_SUMMARY
+          echo "\`\`\`" >> $GITHUB_STEP_SUMMARY
+
+      - name: Run checker performance
         run: |
           curl -O https://gist.githubusercontent.com/kaleidawave/5dcb9ec03deef1161ebf0c9d6e4b88d8/raw/26c26e908a7c6b79a2e93627f1fefa7ffccbd389/demo.ts > demo.ts
 
