Parser and general small fixes

--- a/src/js-cli-and-library/package.json
+++ b/src/js-cli-and-library/package.json
@@ -13,6 +13,9 @@
 		},
 		"./initialised": {
 			"import": "./dist/initialised.mjs"
+		},
+		"./cli": {
+			"import": "./dist/cli.mjs"
 		}
 	},
 	"scripts": {
