--- a/.github/workflows/github-release.yml
+++ b/.github/workflows/github-release.yml
@@ -20,6 +20,7 @@ jobs:
       sponsors: ${{ steps.get-sponsors.outputs.sponsors }}
 
     steps:
+      - uses: actions/checkout@v3
       - name: Get version
         id: get-version
         run: |
