--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -128,6 +128,11 @@ jobs:
         run: cargo test
         working-directory: checker/specification
 
+      - name: Run checker tests
+        if: steps.changes.outputs.checker == 'true'
+        run: cargo test -F ezno-parser
+        working-directory: checker
+
       - name: Run base tests
         run: cargo test
 
