--- a/.github/workflows/performance-and-size.yml
+++ b/.github/workflows/performance-and-size.yml
@@ -2,7 +2,7 @@ name: Performance and size
 
 on:
   push:
-    branches: [main]
+    branches: [main, fixes453]
 
 env:
   CARGO_TERM_COLOR: always
@@ -32,7 +32,14 @@ jobs:
         env:
           CARGO_PROFILE_RELEASE_DEBUG: true
 
-      - name: Run parser (and stringer) performance
+      - name: Download files
+        run: |
+          curl -O https://gist.githubusercontent.com/kaleidawave/5dcb9ec03deef1161ebf0c9d6e4b88d8/raw/03156048e214af0ceee4005ba8b86f96690dcbb2/demo.ts > demo.ts
+
+          curl https://esm.sh/v128/react-dom@18.2.0/es2022/react-dom.mjs > react.js
+
+      - name: Run parser, minfier, stringer performance
+        shell: bash
         run: |
           curl https://esm.sh/v128/react-dom@18.2.0/es2022/react-dom.mjs > react.js
 
@@ -42,18 +49,18 @@ jobs:
           echo "\`\`\`" >> $GITHUB_STEP_SUMMARY
 
       - name: Run checker performance
+        shell: bash
         run: |
-          curl -O https://gist.githubusercontent.com/kaleidawave/5dcb9ec03deef1161ebf0c9d6e4b88d8/raw/03156048e214af0ceee4005ba8b86f96690dcbb2/demo.ts > demo.ts
-
           echo "### Output">> $GITHUB_STEP_SUMMARY
           echo "\`\`\`shell">> $GITHUB_STEP_SUMMARY
-          ./target/release/ezno check demo.ts &>> $GITHUB_STEP_SUMMARY
+          ./target/release/ezno check demo.ts >> $GITHUB_STEP_SUMMARY
           echo "\`\`\`" >> $GITHUB_STEP_SUMMARY
           
           echo "### Hyperfine">> $GITHUB_STEP_SUMMARY
           echo "\`\`\`shell">> $GITHUB_STEP_SUMMARY
           hyperfine './target/release/ezno check demo.ts' >> $GITHUB_STEP_SUMMARY
           echo "\`\`\`" >> $GITHUB_STEP_SUMMARY
+
       - name: Print (linux) binary size
         run: |
           echo "Binary is $(stat -c %s ./target/release/ezno) bytes" >> $GITHUB_STEP_SUMMARY
