--- a/checker/specification/Cargo.toml
+++ b/checker/specification/Cargo.toml
@@ -7,6 +7,8 @@ publish = false
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 # Prevent this from interfering with workspaces
+[workspace]
+members = ["."]
 
 [features]
 just-staging = []
