--- a/checker/specification/Cargo.toml
+++ b/checker/specification/Cargo.toml
@@ -10,6 +10,11 @@ publish = false
 [workspace]
 members = ["."]
 
+[features]
+just-staging = []
+staging = []
+all = ["staging"]
+
 [[test]]
 name = "specification_test"
 path = "test.rs"
