--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -28,7 +28,7 @@ env:
 jobs:
   validity:
     runs-on: ubuntu-latest
-    timeout-minutes: 30
+    timeout-minutes: 10
     steps:
       - uses: actions/checkout@v3
       - uses: dtolnay/rust-toolchain@stable
@@ -38,6 +38,24 @@ jobs:
           path: ${{ env.CACHE_PATHS }}
           key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
 
+      - name: Check source is valid
+        run: cargo check --workspace
+
+      - name: Check binary
+        run: cargo check --bin ezno
+
+  extras:
+    runs-on: ubuntu-latest
+    timeout-minutes: 10
+    steps:
+      - uses: actions/checkout@v3
+      - uses: dtolnay/rust-toolchain@stable
+
+      - uses: actions/cache@v3
+        with:
+          path: ${{ env.CACHE_PATHS }}
+          key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+      
       - uses: dorny/paths-filter@v2
         id: changes
         with:
@@ -48,12 +66,6 @@ jobs:
               - 'checker/**'
             src:
               - 'src/**'
-
-      - name: Check source is valid
-        run: cargo check --workspace
-
-      - name: Check binary
-        run: cargo check --bin ezno
 
       - uses: brndnmtthws/rust-action-cargo-binstall@v1
         if: steps.changes.outputs.src == 'true'
@@ -77,7 +89,7 @@ jobs:
         if: steps.changes.outputs.checker == 'true'
         run: 
           cargo check -p ezno-checker --no-default-features
-
+      
   formating:
     runs-on: ubuntu-latest
     steps:
@@ -98,7 +110,7 @@ jobs:
   tests:
     needs: validity
     runs-on: ubuntu-latest
-    timeout-minutes: 30
+    timeout-minutes: 20
     steps:
       - uses: actions/checkout@v3
       - uses: dtolnay/rust-toolchain@stable
