--- a/.github/workflows/performance-and-size.yml
+++ b/.github/workflows/performance-and-size.yml
@@ -2,7 +2,7 @@ name: Performance and size
 
 on:
   push:
-    branches: [main]
+    branches: [main, fixes271]
 
 env:
   CARGO_TERM_COLOR: always
@@ -34,32 +34,37 @@ jobs:
 
       - name: Download files
         run: |
-          curl -O https://gist.githubusercontent.com/kaleidawave/5dcb9ec03deef1161ebf0c9d6e4b88d8/raw/03156048e214af0ceee4005ba8b86f96690dcbb2/demo.ts > demo.ts
-
           curl https://esm.sh/v128/react-dom@18.2.0/es2022/react-dom.mjs > react.js
-
-      - name: Run parser, minfier, stringer performance
-        shell: bash
-        run: |
-          curl https://esm.sh/v128/react-dom@18.2.0/es2022/react-dom.mjs > react.js
-
-          echo "### Hyperfine">> $GITHUB_STEP_SUMMARY
-          echo "\`\`\`shell">> $GITHUB_STEP_SUMMARY
-          hyperfine './target/release/ezno ast-explorer --file react.js uglifier' >> $GITHUB_STEP_SUMMARY
-          echo "\`\`\`" >> $GITHUB_STEP_SUMMARY
 
       - name: Run checker performance
         shell: bash
-        if: false
         run: |
+          # Generate a file which contains everything that Ezno currently implements  
+          cargo run -p ezno-parser --example code_blocks_to_script ./checker/specification/specification.md demo.ts
+
+          echo "### Checking">> $GITHUB_STEP_SUMMARY
+          echo "\`\`\`ts">> $GITHUB_STEP_SUMMARY
+          cat demo.ts >> $GITHUB_STEP_SUMMARY
+          echo "\`\`\`" >> $GITHUB_STEP_SUMMARY
+
           echo "### Output">> $GITHUB_STEP_SUMMARY
           echo "\`\`\`shell">> $GITHUB_STEP_SUMMARY
           ./target/release/ezno check demo.ts >> $GITHUB_STEP_SUMMARY
           echo "\`\`\`" >> $GITHUB_STEP_SUMMARY
           
-          echo "### Hyperfine">> $GITHUB_STEP_SUMMARY
+          echo "### Performance">> $GITHUB_STEP_SUMMARY
           echo "\`\`\`shell">> $GITHUB_STEP_SUMMARY
           hyperfine './target/release/ezno check demo.ts' >> $GITHUB_STEP_SUMMARY
+          echo "\`\`\`" >> $GITHUB_STEP_SUMMARY
+
+      - name: Run parser, minfier/stringer performance
+        shell: bash
+        run: |
+          curl https://esm.sh/v128/react-dom@18.2.0/es2022/react-dom.mjs > react.js
+
+          echo "### Parsing and minifying `react-dom`">> $GITHUB_STEP_SUMMARY
+          echo "\`\`\`shell">> $GITHUB_STEP_SUMMARY
+          hyperfine './target/release/ezno ast-explorer --file react.js uglifier' >> $GITHUB_STEP_SUMMARY
           echo "\`\`\`" >> $GITHUB_STEP_SUMMARY
 
       - name: Print (linux) binary size
