--- a/.github/workflows/performance-and-size.yml
+++ b/.github/workflows/performance-and-size.yml
@@ -42,18 +42,16 @@ jobs:
           # Generate a file which contains everything that Ezno currently implements  
           cargo run -p ezno-parser --example code_blocks_to_script ./checker/specification/specification.md demo.ts
 
-          echo "### Checking">> $GITHUB_STEP_SUMMARY
-          echo "\`\`\`ts">> $GITHUB_STEP_SUMMARY
+          echo "<details><summary>Input</summary>\`\`\`ts" >> $GITHUB_STEP_SUMMARY
           cat demo.ts >> $GITHUB_STEP_SUMMARY
-          echo "\`\`\`" >> $GITHUB_STEP_SUMMARY
-
-          echo "### Output">> $GITHUB_STEP_SUMMARY
-          echo "\`\`\`shell">> $GITHUB_STEP_SUMMARY
-          ./target/release/ezno check demo.ts >> $GITHUB_STEP_SUMMARY
-          echo "\`\`\`" >> $GITHUB_STEP_SUMMARY
+          echo "\`\`\`</details>" >> $GITHUB_STEP_SUMMARY
+        
+          echo "<details><summary>Diagnostics</summary>\`\`\`shell" >> $GITHUB_STEP_SUMMARY
+          ./target/release/ezno check demo.ts &>> $GITHUB_STEP_SUMMARY
+          echo "\`\`\`</details>" >> $GITHUB_STEP_SUMMARY
           
-          echo "### Performance">> $GITHUB_STEP_SUMMARY
-          echo "\`\`\`shell">> $GITHUB_STEP_SUMMARY
+          echo "### Checking" >> $GITHUB_STEP_SUMMARY
+          echo "\`\`\`shell" >> $GITHUB_STEP_SUMMARY
           hyperfine './target/release/ezno check demo.ts' >> $GITHUB_STEP_SUMMARY
           echo "\`\`\`" >> $GITHUB_STEP_SUMMARY
 
