--- a/.github/workflows/performance-and-size.yml
+++ b/.github/workflows/performance-and-size.yml
@@ -8,7 +8,7 @@ env:
   CARGO_TERM_COLOR: always
 
 jobs:
-  hyperfine:
+  run-benchmarks:
     runs-on: ubuntu-latest
 
     steps:
@@ -42,16 +42,22 @@ jobs:
           # Generate a file which contains everything that Ezno currently implements  
           cargo run -p ezno-parser --example code_blocks_to_script ./checker/specification/specification.md demo.ts
 
-          echo "<details><summary>Input</summary>\`\`\`ts" >> $GITHUB_STEP_SUMMARY
+          echo "<details>
+          <summary>Input</summary>
+          \`\`\`ts
+          " >> $GITHUB_STEP_SUMMARY
           cat demo.ts >> $GITHUB_STEP_SUMMARY
-          echo "\`\`\`</details>" >> $GITHUB_STEP_SUMMARY
+          echo -e "\`\`\`\n</details>" >> $GITHUB_STEP_SUMMARY
+
+          NO_COLOR=1
         
-          echo "<details><summary>Diagnostics</summary>\`\`\`shell" >> $GITHUB_STEP_SUMMARY
+          echo "<details>
+          <summary>Diagnostics</summary>
+          \`\`\`shell" >> $GITHUB_STEP_SUMMARY
           ./target/release/ezno check demo.ts &>> $GITHUB_STEP_SUMMARY
-          echo "\`\`\`</details>" >> $GITHUB_STEP_SUMMARY
+          echo -e "\`\`\`\n</details>" >> $GITHUB_STEP_SUMMARY
           
-          echo "### Checking" >> $GITHUB_STEP_SUMMARY
-          echo "\`\`\`shell" >> $GITHUB_STEP_SUMMARY
+          echo -e "### Checking\n\`\`\`shell" >> $GITHUB_STEP_SUMMARY
           hyperfine './target/release/ezno check demo.ts' >> $GITHUB_STEP_SUMMARY
           echo "\`\`\`" >> $GITHUB_STEP_SUMMARY
 
