--- a/checker/Cargo.toml
+++ b/checker/Cargo.toml
@@ -8,6 +8,7 @@ homepage = "https://kaleidawave.github.io/posts/introducing-ezno"
 authors = ["Ben <kaleidawave@gmail.com>"]
 edition = "2021"
 categories = ["compilers"]
+keywords = ["javascript", "typechecker", "checker", "typescript", "types"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -33,16 +34,16 @@ iterator-endiate = "0.2"
 bimap = "0.6.2"
 
 path-absolutize = { version = "3.0.14", features = ["use_unix_paths_on_wasm"] }
-indexmap = "1.7.0"
+indexmap = "2.1.0"
 either = "1.6.1"
 levenshtein = "1.0.5"
 once_cell = "1.10.0"
-ordered-float = "3.0.0"
+ordered-float = "4.2.0"
 map_vec = "0.3.0"
 
 serde = { version = "1.0", features = ["derive"] }
 # For trait object safe thingy
-erased-serde = "0.3"
+erased-serde = "0.4.1"
 
 [dependencies.parser]
 path = "../parser"
