--- a/parser/Cargo.toml
+++ b/parser/Cargo.toml
@@ -8,7 +8,7 @@ license = "MIT"
 repository = "https://github.com/kaleidawave/ezno"
 homepage = "https://kaleidawave.github.io/posts/introducing-ezno/"
 categories = ["parser-implementations"]
-
+keywords = ["parser-implementations", "javascript", "parser", "ast", "compiler"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
