--- a/.github/workflows/performance-and-size.yml
+++ b/.github/workflows/performance-and-size.yml
@@ -49,17 +49,20 @@ jobs:
           " >> $GITHUB_STEP_SUMMARY
           cat demo.ts >> $GITHUB_STEP_SUMMARY
           echo "\`\`\`
-          </details>" >> $GITHUB_STEP_SUMMARY
+          </details>
+          " >> $GITHUB_STEP_SUMMARY
 
+          # Printing diagnostics, so turn colors off for GH Summary
           NO_COLOR=1
         
           echo "<details>
           <summary>Diagnostics</summary>
 
-          \`\`\`shell" >> $GITHUB_STEP_SUMMARY
-          ./target/release/ezno check demo.ts &>> $GITHUB_STEP_SUMMARY
+          \`\`\`" >> $GITHUB_STEP_SUMMARY
+          ./target/release/ezno check demo.ts --timings &>> $GITHUB_STEP_SUMMARY
           echo "\`\`\`
-          </details>" >> $GITHUB_STEP_SUMMARY
+          </details>
+          " >> $GITHUB_STEP_SUMMARY
           
           echo "### Checking
           \`\`\`shell" >> $GITHUB_STEP_SUMMARY
@@ -71,7 +74,7 @@ jobs:
         run: |
           curl https://esm.sh/v128/react-dom@18.2.0/es2022/react-dom.mjs > react.js
 
-          echo "### Parsing and minifying `react-dom`
+          echo "### Parsing and writing out minified form of `react-dom`
           \`\`\`shell">> $GITHUB_STEP_SUMMARY
           hyperfine './target/release/ezno ast-explorer --file react.js uglifier' >> $GITHUB_STEP_SUMMARY
           echo "\`\`\`" >> $GITHUB_STEP_SUMMARY
