--- a/.github/workflows/github-release.yml
+++ b/.github/workflows/github-release.yml
@@ -97,14 +97,11 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     
-    - uses: actions/download-artifact@v3
+    - uses: actions/download-artifact@v4
       with:
-        name: build-artifacts-windows-latest
         path: build-artifacts
-    - uses: actions/download-artifact@v3
-      with:
-        name: build-artifacts-ubuntu-latest
-        path: build-artifacts
+        pattern: build-artifacts-*
+        merge-multiple: true
 
     - name: Print artifacts
       run: |
