--- a/Cargo.toml
+++ b/Cargo.toml
@@ -76,6 +76,7 @@ package = "ezno-parser"
 
 [target.'cfg(target_family = "wasm")'.dependencies]
 wasm-bindgen = "=0.2.89"
+wasm-bindgen-derive = "0.2.1"
 serde-wasm-bindgen = "0.6.3"
 console_error_panic_hook = "0.1.7"
 js-sys = "0.3"
