--- a/parser/Cargo.toml
+++ b/parser/Cargo.toml
@@ -52,6 +52,10 @@ source-map = { version = "0.14.7", features = [
   "serde-serialize",
   "self-rust-tokenize",
 ] }
+# source-map = { version = "0.14.7", features = [
+#   "serde-serialize",
+#   "self-rust-tokenize",
+# ] }
 
 # Needs buffered and not parralel for WASM
 [target.'cfg(target_family = "wasm")'.dependencies]
