--- a/Cargo.toml
+++ b/Cargo.toml
@@ -62,13 +62,10 @@ enum-variants-strings = "0.2.2"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.107"
 
-[patch.crates-io]
-source-map = { git = "https://github.com/kaleidawave/source-map", branch = "source-mappings-fix" }
-
 [dependencies.checker]
 path = "./checker"
 version = "0.0.14"
-features = ["ezno-parser"]
+features = ["ezno-parser", "serde"]
 package = "ezno-checker"
 
 [dependencies.parser]
