--- a/Cargo.toml
+++ b/Cargo.toml
@@ -62,10 +62,13 @@ enum-variants-strings = "0.2.2"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.107"
 
+[patch.crates-io]
+source-map = { git = "https://github.com/kaleidawave/source-map.git", branch = "characters-on-line" }
+
 [dependencies.checker]
 path = "./checker"
 version = "0.0.14"
-features = ["ezno-parser", "serde"]
+features = ["ezno-parser", "serde_input_and_output"]
 package = "ezno-checker"
 
 [dependencies.parser]
