--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -43,74 +43,6 @@ jobs:
 
       - name: Check binary
         run: cargo check --bin ezno
-
-  extras:
-    runs-on: ubuntu-latest
-    needs: validity
-    timeout-minutes: 10
-    steps:
-      - uses: actions/checkout@v3
-      - uses: dtolnay/rust-toolchain@stable
-
-      - uses: actions/cache@v3
-        with:
-          path: ${{ env.CACHE_PATHS }}
-          key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
-      
-      - uses: dorny/paths-filter@v2
-        id: changes
-        with:
-          filters: |
-            src:
-              - 'src/**'
-            parser:
-              - 'parser/**'
-            checker:
-              - 'checker/**'
-
-      - uses: brndnmtthws/rust-action-cargo-binstall@v1
-        if: steps.changes.outputs.src == 'true'
-        with:
-          packages: wasm-bindgen-cli@0.2.89
-      - uses: denoland/setup-deno@v1
-        if: steps.changes.outputs.src == 'true'
-        with:
-          deno-version: v1.x
-      - uses: actions/setup-node@v3
-        if: steps.changes.outputs.src == 'true'
-        with:
-          node-version: 18
-
-      - name: Build and test WASM
-        if: steps.changes.outputs.src == 'true'
-        # TODO want `continue-on-error: true` but doesn't report error
-        run: |
-          rustup target add wasm32-unknown-unknown
-          npm ci
-          npm run build
-          npm run test
-          node ./dist/cli.cjs info
-          deno run -A ./dist/cli.mjs info
-        working-directory: src/js-cli-and-library
-        shell: bash
-
-      - name: Check parser without extras
-        if: steps.changes.outputs.parser == 'true'
-        # TODO want `continue-on-error: true` but doesn't report error
-        run: 
-          cargo check -p ezno-parser --no-default-features
-
-      - name: Check parser generator
-        if: steps.changes.outputs.parser == 'true'
-        # TODO want `continue-on-error: true` but doesn't report error
-        run: 
-          cargo test -p ezno-ast-generator
-
-      - name: Check checker without default features
-        if: steps.changes.outputs.checker == 'true'
-        # TODO want `continue-on-error: true` but doesn't report error
-        run: 
-          cargo check -p ezno-checker --no-default-features
       
   formating:
     runs-on: ubuntu-latest
@@ -182,6 +114,76 @@ jobs:
       - name: Run base tests
         run: cargo test
 
+  extras:
+    runs-on: ubuntu-latest
+    needs: validity
+    timeout-minutes: 10
+    steps:
+      - uses: actions/checkout@v3
+      - uses: dtolnay/rust-toolchain@stable
+
+      - uses: actions/cache@v3
+        with:
+          path: ${{ env.CACHE_PATHS }}
+          key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+      
+      - uses: dorny/paths-filter@v2
+        id: changes
+        with:
+          filters: |
+            src:
+              - 'src/**'
+            parser:
+              - 'parser/**'
+            checker:
+              - 'checker/**'
+
+      - uses: brndnmtthws/rust-action-cargo-binstall@v1
+        if: steps.changes.outputs.src == 'true'
+        with:
+          packages: wasm-bindgen-cli@0.2.89
+      - uses: denoland/setup-deno@v1
+        if: steps.changes.outputs.src == 'true'
+        with:
+          deno-version: v1.x
+      - uses: actions/setup-node@v3
+        if: steps.changes.outputs.src == 'true'
+        with:
+          node-version: 18
+
+      - name: Build and test WASM
+        if: steps.changes.outputs.src == 'true'
+        # TODO want `continue-on-error: true` but doesn't report error
+        run: |
+          # TODO `cargo check --target wasm32-unknown-unknown --lib` might be good enough
+
+          rustup target add wasm32-unknown-unknown
+          npm ci
+          npm run build
+          npm run test
+          node ./dist/cli.cjs info
+          deno run -A ./dist/cli.mjs info
+        working-directory: src/js-cli-and-library
+        shell: bash
+
+      - name: Check parser without extras
+        if: steps.changes.outputs.parser == 'true'
+        # TODO want `continue-on-error: true` but doesn't report error
+        run: 
+          cargo check -p ezno-parser --no-default-features
+
+      - name: Check parser generator
+        if: steps.changes.outputs.parser == 'true'
+        # TODO want `continue-on-error: true` but doesn't report error
+        run: 
+          cargo test -p ezno-ast-generator
+
+      - name: Check checker without default features
+        if: steps.changes.outputs.checker == 'true'
+        # TODO want `continue-on-error: true` but doesn't report error
+        run: 
+          cargo check -p ezno-checker --no-default-features
+
   fuzzing:
     needs: validity
     runs-on: ubuntu-latest
@@ -245,7 +247,16 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: dtolnay/rust-toolchain@stable
+
+      - uses: dorny/paths-filter@v2
+        id: changes
+        with:
+          filters: |
+            manifests:
+              - '**/*.toml'
+
       - name: Check that it will publish to crates.io
+        if: steps.changes.outputs.manifests == 'true'
         run: |
           cargo metadata --offline --format-version 1 --no-deps | jq -r ".workspace_members[]" | while read -r _n _v pathInfo ; do
             if ! grep -q "publish = false" "${pathInfo:13:-1}/Cargo.toml"; then
