--- a/checker/Cargo.toml
+++ b/checker/Cargo.toml
@@ -18,7 +18,7 @@ workspace = true
 [features]
 default = ["ezno-parser"]
 ezno-parser = ["dep:parser"]
-serde_input_and_output = ["dep:serde"]
+serde-serialize = ["dep:serde"]
 
 [dependencies]
 source-map = { version = "0.14.9", features = [
