--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -220,7 +220,8 @@ jobs:
       - name: Run fuzzing
         if: steps.changes.outputs.parser == 'true'
         run: |
-          cargo fuzz run -s none ${{ matrix.fuzz-target }} -- -timeout=10 -max_total_time=120 -use_value_profile=1
+          # cargo fuzz run -s none ${{ matrix.fuzz-target }} -- -timeout=10 -max_total_time=120 -use_value_profile=1 
+          cargo fuzz run -s none ${{ matrix.fuzz-target }} -- -timeout=10 -max_total_time=120 -use_value_profile=1 -fork=1 -ignore_crashes=1
         working-directory: parser/fuzz
 
   clippy:
