Get declarations to show up in built output (NB: required an upgrade to unbuild)

--- a/src/js-cli-and-library/package.json
+++ b/src/js-cli-and-library/package.json
@@ -65,6 +65,7 @@
 				"input": "./src/cli"
 			}
 		],
+		"declaration": true,
 		"rollup": {
 			"commonjs": true,
 			"esbuild": {
@@ -73,6 +74,6 @@
 		}
 	},
 	"devDependencies": {
-		"unbuild": "^1.1.2"
+		"unbuild": "^2.0.0"
 	}
 }
