--- a/src/js-cli-and-library/package.json
+++ b/src/js-cli-and-library/package.json
@@ -21,9 +21,9 @@
 	"scripts": {
 		"clean": "rmdir dist && rmdir build",
 		"build": "cargo build --lib --target wasm32-unknown-unknown && npm run bind && npm run build-js",
-		"build-release": "cargo build --lib --release --target wasm32-unknown-unknown && npm run bind-release && npm run build-js",
-		"bind": "wasm-bindgen --out-dir build --target web ../../target/wasm32-unknown-unknown/debug/ezno_lib.wasm",
-		"bind-release": "wasm-bindgen --out-dir build --target web ../../target/wasm32-unknown-unknown/release/ezno_lib.wasm",
+		"build-release": "npm run bind-release && npm run build-js",
+		"bind": "wasm-pack build --dev --out-dir build --target web --no-pack",
+		"bind-release": "wasm-pack build --release --out-dir build --target web --no-pack",
 		"build-js": "unbuild && cp ./build/ezno_lib_bg.wasm dist/shared && cp src/cli_node.cjs dist/cli.cjs",
 		"test": "npm run build && npm run run-tests",
 		"run-tests": "node test.mjs && deno run -A test.mjs"
