--- a/checker/Cargo.toml
+++ b/checker/Cargo.toml
@@ -47,6 +47,11 @@ map_vec = "0.3.0"
 
 serde = { version = "1.0", features = ["derive"], optional = true }
 
+[target.'cfg(target_family = "wasm")'.dependencies]
+tsify = "0.4.5"
+wasm-bindgen = "=0.2.89"
+
+
 [dependencies.parser]
 path = "../parser"
 optional = true
