--- a/parser/Cargo.toml
+++ b/parser/Cargo.toml
@@ -45,6 +45,8 @@ enum-variants-strings = "0.2"
 
 get-field-by-type = "0.0.3"
 
+macro_rules_attribute = { version = "0.2.0" }
+
 serde = { version = "1.0", features = ["derive"], optional = true }
 self-rust-tokenize = { version = "0.3.3", optional = true }
 
