--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -161,6 +161,9 @@ jobs:
           npm run test
           node ./dist/cli.cjs info
           deno run -A ./dist/cli.mjs info
+          # typegen exhibits debug/release divergent quirks
+          npm run build-release
+          npx -p typescript tsc --strict ./dist/shared/ezno_lib*.d.ts
         working-directory: src/js-cli-and-library
         shell: bash
 
