Use derive 'bundling' macro more & hopefully some fixes

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -165,7 +165,7 @@ jobs:
 
           # typegen exhibits debug/release divergent quirks
           # npm run build-release
-          npx -p typescript tsc --strict ./build/ezno_lib.d.ts
+          npx -p typescript tsc --strict --pretty ./build/ezno_lib.d.ts
         working-directory: src/js-cli-and-library
         shell: bash
 
